welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not found: value T
		brosse(T(decalage%T.lenght))
                       ^Array2:10: error: not found: value T
		for(i <- 1 to T.length-1)
                              ^Array2:15: error: not found: value T
		for(i <- 1 to T.length-1)
                              ^